components/apps/wax100-blog/overlays/staging/scheduling-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wax100-blog
spec:
  selector:
    matchLabels:
      app: wax100-blog
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-pool
                    operator: In
                    values:
                      - stag-pool
      tolerations:
        - key: "cloud.google.com/gke-spot"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
